edit pool
